[package]
name = "ruisutil"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rust-crypto = {version="0.2.36", optional = true}
# rand = "0.8.4"
log = {version="0.4.*", features = ["std"], optional = true}
chrono = {version="0.4.19", optional = true}
async-std = {version="1", optional = true}
tokio = { version = "1", features = ["full"], optional = true }

[features]
# default=["asyncs","times"]
all=["asyncs","times","logs","filesplit","cryptos"]
alltk=["tokios","times","logs","filesplit","cryptos"]
asyncs=["async-std"]
tokios=["tokio"]
times=["chrono"]
logs=["log","filesplit","times"]
cryptos=["sha1"]
sha1=["rust-crypto"]
filesplit=[]
mini=[]